[package]
name = "ce"
version = "0.1.0"
authors = ["LL L <lll@xeltek-cn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = {version = "3.0.0-beta.1", features= ["yaml"]}
slog = "*"
slog-scope = "*"
slog-term = "*"